<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:background="#AAA9A9"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/text_margin"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/branceImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_tct"
                />
            <TextView
                android:id="@+id/branceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Course"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size3"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@string/bold"
                android:textColor="@color/text_Color" />
        </LinearLayout>
        <TextView
            android:id="@+id/branceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collage_description"
            android:textSize="@dimen/text_size1"
            android:layout_margin="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@string/light"
            android:textColor="@color/text_Color"/>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>