<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".admin.faculty.AddTeacher">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/AddTeacherImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/teacher"
            app:civ_border_width="2dp"
            app:civ_border_color="?attr/primaryTextColor"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="?attr/primaryTextColor"
                android:hint="@string/name"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddTeacherEmail"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColorHint="?attr/primaryTextColor"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddTeacherPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/primaryTextColor"

                android:imeOptions="actionDone"
                android:hint="@string/post"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AddTeachermobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/primaryTextColor"
                android:hint="@string/mobile"
                android:imeOptions="actionDone"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/AddTeacherCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_margin="20dp"
            android:background="?attr/primaryTextColor"
             android:gravity="center"
            android:layout_marginVertical="16dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/UploadTeacherBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_teacher"
            android:textColor="?attr/primaryTextColor"
            android:layout_margin="14dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>