<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".admin.faculty.UpdateTeacher">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/updateTeacherImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/teacher"
            app:civ_border_width="2dp"
            app:civ_border_color="?attr/primaryTextColor"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColorHint="?attr/primaryTextColor"
                android:inputType="text"
                android:hint="@string/name"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateTeacherEmail"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColorHint="?attr/primaryTextColor"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateTeacherPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/primaryTextColor"
                android:imeOptions="actionDone"
                android:hint="@string/post"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateTeacherMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textColorHint="?attr/primaryTextColor"
                android:hint="@string/mobile"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateTeacherBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Update"
                android:textColor="?attr/primaryTextColor"
                android:layout_margin="14dp"
                android:textAllCaps="false"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteTeacherBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="?attr/primaryTextColor"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_margin="14dp"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>