<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".admin.notice.UploadNotice">
    <LinearLayout
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/AddImage"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_puple"
                    android:src="@drawable/ic_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/primaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noticeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/primaryTextColor"
                android:hint="@string/notice_title"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/UploadNoticeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_notice"
            android:textColor="?attr/primaryTextColor"
            android:layout_margin="14dp"
            android:textAllCaps="false"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="380dp">
            <ImageView
                android:id="@+id/noticeImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:scaleType="center"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>