<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">
    <LinearLayout
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/AddNotice"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_pink"
                    android:src="@drawable/ic_notice"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_notice"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/AddGallery"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_green"
                    android:src="@drawable/ic_gallery"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
    <LinearLayout
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/AddEbook"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_puple"
                    android:src="@drawable/ic_ebook"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_ebook"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/AddFaculty"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_yellow"
                    android:src="@drawable/ic_faculty"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_faculty"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
    <LinearLayout
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/DeleteNotice"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:background="@drawable/circle_red"
                    android:src="@drawable/ic_delete"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="?attr/secondaryTextColor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_notice"
                    android:textColor="?attr/primaryTextColor"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</LinearLayout>